# PlantCareAI

./: .env.example  .gitignore  AUTHENTICATION_FLOW.md  app.py  class_names.json  pyproject.toml  requirements.txt  test_weather.py
apps/AI_app/: main.py
apps/AI_app/src/PlantCare_AI/contant/: __init__.py
apps/AI_app/src/PlantCare_AI/prompt_library/: prompts.py
apps/AI_app/src/PlantCare_AI/utils/: model_loader.py
static/: analyze_style.css  style.css
static/uploads/: .gitkeep
templates/: analyze.html  index.html  signin.html  signup.html
