[project]
name = "plantcare-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-mysqldb>=2.0.0",
    "langchain>=1.2.6",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "markdown>=3.10",
    "mysql-connector-python>=9.5.0",
    "opencv-python>=4.13.0.90",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-box>=7.3.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tensorflow==2.20.0",
]
